[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["taylor1355 <hearntaylor@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"